# Nongine-OpenGL

./: Build.bat  CMakeLists.txt  Gen_Emscriptem.bat  Generate_Game.bat  TGP23.sln
Assets/Models/: Plane.fbx
Assets/Shaders/: 2DOutlineFS.glsl  DefaultFS.glsl  DefaultSpriteFS.glsl  DefaultSpriteVS.glsl  DefaultVS.glsl  NonInstancedSpriteVS.glsl  PixelPickingFS.glsl  QuadVS.glsl  RectOutlineFS.glsl  RectPickingFS.glsl
Assets/Sprites/: Folder.dds  MiddleTest.dds  Person.json
Networking/exe/: imgui.ini
Networking/exe/Assets/MAterials/: TGABroMaterial.json
Networking/exe/Assets/Models/: Bone.fbx  Cylinder.fbx  MaterialTester.fbx  SDFTRMonster0001.fbx
Networking/exe/Assets/Scenes/: Empty Scene.no
Networking/exe/Assets/Shaders/: Default_VS.hlsl  DefferedFullscreen_PS.hlsl  Deffered_PS.hlsl  GaussianBlurHorizontal_PS.hlsl  GaussianBlurVertical_PS.hlsl  Particle_PS.hlsl  ReWrite_PS.hlsl  SSAO.hlsl  Simple_Lit_PS.hlsl  Skybox_VS.hlsl  Sprite_EditorShader_PS.hlsl  Sprite_EditorShader_VS.hlsl  UpSample_PS.hlsl
Networking/exe/Assets/Sprites/: EmptyFile.dds  HLSLFileIcon.dds
Networking/exe/Assets/Textures/: Monster.dds  mature-oak-tree-albedo.dds  mature-oak-tree-normal-ogl.dds  negx.dds  negz.dds  posz.dds
Networking/exe/Settings/: Collisionlayers.json
Networking/source/: TGP23.sln
Networking/source/Source/Engine/: Engine.pch.cpp  Engine.pch.h  Engine.vcxproj  Engine.vcxproj.filters
Networking/source/Source/Game/: Game.vcxproj  Game.vcxproj.filters  GameWorld.cpp  GameWorld.h
Networking/source/Source/ImGui/: ImGui.vcxproj.filters
Networking/source/Source/ImGuizmo/: ImCurveEdit.cpp  ImGradient.cpp  ImGuizmo.h  ImGuizmo.vcxproj  ImSequencer.cpp
Networking/source/Source/PhysicsEngine/: PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngine.pch.cpp  PhysicsEngine.pch.h
Networking/source/Source/Shaders/: Shaders.vcxproj  (+1 more)
Settings/: UtilityFunctions.cmake  imgui.ini
Source/Application/: Editor.cpp  Gameworld.cpp  Gameworld.h  Main.cpp  editor.h
Source/Application/ModelViewer/: Application.cpp  Application.h  Main.cpp  ModelViewer.cpp  ModelViewer.h  ModelViewer.vcxproj  ModelViewer.vcxproj.filters  ModelViewer.vcxproj.xml  RCa28152
Source/Engine/: CMakeLists.txt  Engine.pch.cpp  Engine.pch.h  Engine.vcxproj  Engine.vcxproj.filters
Source/Engine/GameEngine/: AssetsTab.cpp  Camera.cpp  Camera.h  ComponentManager.cpp  ComponentManager.h  Console.h  DefferedRendering.cpp  DefferedRendering.h  GameCamera.cpp  GameCamera.h  Inspector2DCamera.cpp  Inspector2DCamera.h  InspectorCamera.cpp  InspectorCamera.h  MainSingleton.cpp  MainSingleton.h  NetworkManager.cpp  NetworkManager.h  PostProcessing.cpp  PostProcessing.h  SceneManagerInternal.cpp  SceneManagerInternal.h  SpriteEditor.h
Source/Engine/GraphicsEngine/: DebugDrawer.h  GraphicsCommandList.cpp  GraphicsCommandList.h  GraphicsEngine.cpp  GraphicsEngine.h  Mesh.cpp  Mesh.h  PipelineStateData.cpp  PipelineStateData.h  RHIStruct.h  RenderHardwareInterface.cpp  RenderHardwareInterface.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureHelper.cpp  TextureHelper.hpp  TextureLoader.h  Vertex.h
Source/FileCollection/: CMakeLists.txt
Source/Game/: Game.vcxproj  GameWorld.cpp  GameWorld.h
Source/ImGui/: CMakeLists.txt  ImGui.vcxproj
Source/ImGui/ImGui/: imgui_internal.h
Source/ImGui/x64/Debug/ImGui.tlog/: CL.read.1.tlog  ImGui.lastbuildstate  Lib-link.read.1.tlog
Source/ImGuizmo/: GraphEditor.cpp  ImCurveEdit.h  ImGuizmo.cpp  ImSequencer.h  ImZoomSlider.h
Source/Networking/Client/: CMakeLists.txt  Client.cpp  Client.h
Source/Networking/Client/x64/Release/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Client.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Source/Networking/Server/: CMakeLists.txt  Server.cpp  Server.h
Source/Networking/Server/x64/Release/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Source/Networking/Shared/: Common.h  NetRole.h  Shared.vcxproj  Shared.vcxproj.filters
Source/PhysicsEngine/: CMakeLists.txt  Intersections.hpp  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters  PhysicsEngine2D.cpp  PhysicsEngine2D.h  PhysicsScene.h  PhysicsScene2D.cpp  PhysicsScene2D.h
Source/PhysicsEngine/x64/Release/PhysicsEngine.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog
Source/Shaders/: Shaders.vcxproj  Shaders.vcxproj.filters
Source/StartServer/: CMakeLists.txt  StartServer.cpp  Start_Server_unity.cpp
Source/StartServer/x64/Debug/StartServer.tlog/: CL.read.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.2.tlog  link.secondary.1.tlog  link.write.1.tlog
Source/Utilities/: StringHelpers.h
Source/Utilities/CommonUtilities/: CMakeLists.txt  CommonUtilities.cpp  CommonUtilities.vcxproj  CommonUtilities.vcxproj.filters  InputHandler.cpp  Timer.cpp
Source/Utilities/CommonUtilities/include/: Hash.h  HashMap.h  InputHandler.h  PerlinNoise.hpp  String.cpp  String.hpp  Timer.h  UtilityFunctions.hpp  lookup3.h
Source/Utilities/CommonUtilities/include/Matrix/: Matrix.hpp  Matrix3x3.hpp  Matrix4x4.hpp
Source/Utilities/CommonUtilities/include/Primitive/: AABB3D.hpp  Intersection.hpp  Line.hpp  LineVolume.hpp  Plane.hpp  Ray.hpp  Shape.hpp  Sphere.hpp
Source/Utilities/CommonUtilities/include/Quaternion/: Quaternion.cpp  Quaternion.hpp
Source/Utilities/CommonUtilities/include/Vector/: Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Source/Utilities/CommonUtilities/x64/Debug/CommonUtilities.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CommonUtilities.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Source/Utilities/CommonUtilities/x64/Release/CommonUtilities.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Source/Utilities/Logger/: Logger.cpp
(+307 files in other folders)
