cmake_minimum_required(VERSION "3.19.2")

include("${CMAKE_SOURCE_DIR}/Settings/UtilityFunctions.cmake")

project(Start_Server LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Bin)

include_directories(
    "${CMAKE_SOURCE_DIR}/external/include/"
    "${CMAKE_SOURCE_DIR}/Source/ImGui/"
    "${CMAKE_SOURCE_DIR}/Source/Utilities/CommonUtilities/include"
    "${CMAKE_SOURCE_DIR}/Source/Engine/GraphicsEngine/"
    "${CMAKE_SOURCE_DIR}/Source/Engine/GameEngine/"
    "${CMAKE_SOURCE_DIR}/Source/Application/"
    "${CMAKE_SOURCE_DIR}/Source/"
    "${CMAKE_SOURCE_DIR}/Source/Networking/"
    "${CMAKE_SOURCE_DIR}/Source/StartServer/"
)

file(GLOB_RECURSE SERVER_SOURCES CONFIGURE_DEPENDS 
	"${CMAKE_SOURCE_DIR}/Source/Application/Editor.cpp"
	"${CMAKE_SOURCE_DIR}/Source/Engine/GraphicsEngine/*.cpp" 
	"${CMAKE_SOURCE_DIR}/Source/Engine/GraphicsEngine/Material/*.cpp" 
	"${CMAKE_SOURCE_DIR}/Source/Engine/GraphicsEngine/GraphicCommands/*.cpp" 
	"${CMAKE_SOURCE_DIR}/Source/Engine/GameEngine/Components/*.cpp"
	"${CMAKE_SOURCE_DIR}/Source/Engine/GameEngine/*.cpp" 
	"${CMAKE_SOURCE_DIR}/Source/Utilities/CommonUtilities/*.cpp" 
	"${CMAKE_SOURCE_DIR}/Source/Networking/Client/Client.cpp"
	"${CMAKE_SOURCE_DIR}/Source/Networking/Server/Server.cpp"
)
list(REMOVE_ITEM SERVER_SOURCES "${CMAKE_SOURCE_DIR}/Source/Engine/GraphicsEngine/Texture.cpp")




function(AddUnityTargetServer TARGET_NAME)
    set(UNITY_BUILD_FILE ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME}_unity.cpp)
    
    file(WRITE ${UNITY_BUILD_FILE} "// Unity build generated by CMake\n\n")
    foreach(SRC_FILE ${ARGN})
        file(APPEND ${UNITY_BUILD_FILE} "#include \"${SRC_FILE}\"\n")
    endforeach()
    
        add_executable(${TARGET_NAME} ${UNITY_BUILD_FILE})

    
    target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
endfunction()




AddUnityTargetServer(Start_Server "${CMAKE_SOURCE_DIR}/Source/StartServer/StartServer.cpp" ${SERVER_SOURCES})

target_link_directories(Start_Server PRIVATE "${CMAKE_SOURCE_DIR}/external/lib/" 
                        $<$<CONFIG:Debug>:${CMAKE_SOURCE_DIR}/Lib/Debug/>
                        $<$<CONFIG:Release>:${CMAKE_SOURCE_DIR}/Lib/Release/>
)

target_compile_definitions(Start_Server PRIVATE ISSERVER)

target_compile_definitions(Start_Server PRIVATE OPENGL $<$<CONFIG:Debug>:_DEBUG>)

if(WIN32)
    target_link_options(Start_Server PRIVATE /NODEFAULTLIB:MSVCRT)
endif()

target_link_libraries(Start_Server PRIVATE Client)
target_link_libraries(Start_Server PRIVATE Server)

find_package(OpenGL REQUIRED)
target_link_libraries(Start_Server PRIVATE CommonUtilities Engine ImGui PhysicsEngine glad OpenGL::GL)

if(WIN32)
    target_compile_definitions(Start_Server PRIVATE NONWIN32)
    # target_link_libraries(Start_Server PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/external/lib/glfw3.lib")
    # target_link_libraries(Start_Server PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/external/lib/glfw3_mt.lib")
endif(WIN32)

if(UNIX)
    target_compile_definitions(Start_Server PRIVATE NONUNIX)
    #target_compile_definitions(Game_Engine PRIVATE NONGINEASSETPATH=\"${CMAKE_CURRENT_SOURCE_DIR}\")
    #target_link_libraries(Start_Server PRIVATE glfw)
endif(UNIX)

set_target_properties(Start_Server PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/Bin")

set_target_properties(Start_Server PROPERTIES OUTPUT_NAME_DEBUG "StartServer_debug")
set_target_properties(Start_Server PROPERTIES OUTPUT_NAME_RELEASE "StartServer_release")

target_compile_definitions(Start_Server PRIVATE IMGUISETTINGSDIR="${CMAKE_SOURCE_DIR}/Settings/imgui.ini")